# Tapak

./: README.md  Tapak_agent_prompt.md  main.py  pyproject.toml
data/: Penduduk, Laju Pertumbuhan Penduduk, Distribusi Persentase Penduduk Kepadatan Penduduk, Rasio Jenis Kelamin Penduduk Menurut Kecamatan di Kota Bandung, 2026.csv
data/overpass/: overpass_4a_poi.json  overpass_4b_civic.json  overpass_4c_parks.json  overpass_4e_catering.json  overpass_4f_shops.json  overpass_4g_offices.json  overpass_4i_recreation.json
docs/: Zoning management of urban informal vendor spaces using mobile signaling and machine learning The case of Wuhan.txt
output/: bandung_vendor_zones.html  feature_matrix.csv  grid_scored.csv  tapak_model.json
output/data/: feature_matrix.csv  grid_refined_250m.csv  grid_scored.csv  sensitivity_zones.csv
output/maps/: bandung_vendor_zones.html
output/models/: tapak_model.json
output/tables/: model_comparison.csv  policy_recommendations.csv  vif_results.csv
src/: fetch_overpass_data.js  overpass_script_example.js  tapak_pipeline.py
