[project]
name = "tapak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.3.0",
    "jupytext>=1.19.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "shapely>=2.1.2",
    "xgboost>=3.2.0",
]
